<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"></item>
    <item
        android:id="@+id/actionFilter"
        android:icon="@drawable/filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/actionSync"
        android:title="@string/action_sync"></item>
    <item
        android:id="@+id/actionExport"
        android:title="@string/action_export"></item>
    <item
        android:id="@+id/actionChangePassword"
        android:title="@string/action_change_password"></item>
    <item
        android:id="@+id/actionLogout"
        android:title="@string/action_logout"></item>
</menu>