<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_assign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.webonise.assetmanager.Activity.AssignActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_assignEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editAssignEmail"
                style="@style/inputFont"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_assignCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editAssignCompany"
                style="@style/inputFont"
                android:hint="@string/hint_company" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtUserType"
            style="@style/codeFont"
            android:hint="@string/hint_userType" />

        <Spinner
            android:id="@+id/spinnerUserType"
            style="@style/spinnerStyle"
            android:entries="@array/userType">

        </Spinner>

        <TextView
            android:id="@+id/txtAssignType"
            style="@style/codeFont"
            android:hint="@string/hint_assignmentType" />

        <Spinner
            android:id="@+id/spinnerAssignType"
            style="@style/spinnerStyle"
            android:entries="@array/assignType">

        </Spinner>

        <TextView
            android:id="@+id/txtAssignDate"
            style="@style/codeFont"
            android:hint="@string/hint_dateOfAssignment" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></DatePicker>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_assignNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editAssignNote"
                style="@style/inputFont"
                android:hint="@string/hint_note"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>