<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_cable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.webonise.assetmanager.Activity.ConnectorCommonActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTag"
                style="@style/inputFont"
                android:hint="@string/hint_tag" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editBrand"
                style="@style/inputFont"
                android:hint="@string/hint_brand" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_serialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editserial"
                style="@style/inputFont"
                android:hint="@string/hint_serialNo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editowner"
                style="@style/inputFont"
                android:hint="@string/hint_owner" />
        </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSaveDevice"
                style="@style/buttonFont"
                android:layout_weight="1"
                android:text="@string/btn_saveDevice" />

    </LinearLayout>
</ScrollView>