<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/recyclerWidth"
    tools:context="com.example.webonise.assetmanager.Activity.ChangePasswordActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editNewPassword"
            style="@style/inputFont"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_confirmPassword"
        android:layout_width="match_parent"
        android:layout_below="@id/input_layout_newPassword"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editConfirmPassword"
            style="@style/inputFont"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/buttonFont"
        android:id="@+id/btnChangePassword"
        android:layout_below="@id/input_layout_confirmPassword"
        android:hint="@string/button_change"/>
</RelativeLayout>
